--- a/compare_table_model_css_only.css
+++ b/compare_table_model_css_only.css
@@ -1,6 +1,8 @@
 .responsive-compare-table {
                           display:flex; 
-                          flex-wrap: wrap; 
+                          flex-wrap: wrap;
+                          font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                          font-size: 14px;
                           }
                           
 .responsive-column {
@@ -8,11 +10,11 @@
                    margin-bottom:5px;
  }
  
- .responsive-image-div {
+.responsive-image-div {
                        border: solid 1px #E8E8E8;
   }
  
-.responsive-image-div-first-colum {
+.responsive-image-div-first-column {
                                    border-top-left-radius: 8px; 
                                    border: solid 1px #E8E8E8;
   }
@@ -60,7 +62,7 @@
                                    text-align:center;
  }
  
-.responsive-button {
+a.responsive-button {
                    background-color: #ff9900;
                    border: none;
                    border-radius:8px;
@@ -74,8 +76,12 @@
                    cursor: pointer;
                    width: 80%;
  }
+
+ a.responsive-button:hover {
+                    color: white;
+ }
  
-.responsive-button-first-column {
+a.responsive-button-first-column {
                                 background-color: #ff9900;
                                 border: none;
                                 border-radius:8px;
@@ -89,8 +95,12 @@
                                 cursor: pointer;
                                 width: 80%;
  }
+
+ a.responsive-button-first-column:hover {
+                                 color: white;
+  }
  
-.responsive-button-last-column {
+a.responsive-button-last-column {
                                background-color: #ff9900;
                                border: none;
                                border-radius:8px;
@@ -103,4 +113,8 @@
                                margin: 10px auto;
                                cursor: pointer;
                                width: 80%;
+ }
+
+ a.responsive-button-last-column:hover {
+                                color: white;
  }
