Propane tankless comparison table is added Projects is restructured, old files are deleted

--- a/compare-tables/styles_for_compare_table.css
+++ b/compare-tables/styles_for_compare_table.css
@@ -12,6 +12,10 @@ div.responsive-column {
                    margin-bottom:5px;
  }
 
+ div.responsive-title {
+                    font-weight:bold;
+ }
+
 div.responsive-image-div {
                        border: solid 1px #E8E8E8;
   }
