--- a/compare-tables/styles_for_compare_table.css
+++ b/compare-tables/styles_for_compare_table.css
@@ -5,6 +5,7 @@ div.responsive-compare-table {
                           flex-wrap: wrap;
                           font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
                           font-size: 14px;
+                          margin-bottom: 20px;
                           }
 
 div.responsive-column {
