--- a/table-of-contents/styles-for-table-of-content.css
+++ b/table-of-contents/styles-for-table-of-content.css
@@ -10,8 +10,7 @@
     font-size: .95em;
     min-width: 200px;
     float: left;
-    margin: 0;
-    margin-left: 0;
+    margin: 0 0 20px 0;
     line-height: 1em;
     width: 100%;
 }
